[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "springable"
version = "0.1.6"
authors = [
    {name="Paul Ducarme"},
    {email="paulducarme@hotmail.com" },
]
description = "Nonlinear spring assembly solver and visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tomli; python_version < '3.11'"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["nonlinear", "spring", "simulation", "animation", "instability", "snap-through"]

[tool.setuptools]
include-package-data = true  # is true by default for setuptools v >= 61.0.0

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["springable.dynamics"]


[project.urls]
Homepage = "https://ducarme.github.io/springable/"
Source = "https://github.com/ducarme/springable"
Issues = "https://github.com/ducarme/springable/issues"



